# HowTo

./: readme.md  readme_server.md
articles/: ability.md  about.md  empty.md  feature.md
back/HowTo/: .gitignore  Dockerfile  HowTo.sln  readme.md
back/HowTo/ATI.Services.Common.Extensions.OperationResult/: ATI.Services.Common.Extensions.OperationResult.fsproj  Extensions.fs  Library.fs
back/HowTo/Common/: ActionStatus.cs  OperationError.cs  OperationResult.cs  Readme.md
back/HowTo/HowTo/: HowTo.csproj  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json
back/HowTo/HowTo.DataAccess/: HowTo.DataAccess.csproj
back/HowTo/HowTo.DataAccess/Helpers/: FileSystemHelper.cs
back/HowTo/HowTo.Entities/: Constants.cs  EntityStatus.cs  Errors.cs  HowTo.Entities.csproj  User.cs  UserRole.cs
back/HowTo/HowTo.Tests/: ApprovedViewTests.cs  ArticleTests.cs  BaseTests.cs  BaseTestsWithArtefacts.cs  CourseTests.cs  HowTo.Tests.csproj  InteractiveReplyTests.cs  InteractiveTests.cs  MultiThreadingTests.cs  OperationResultTests.cs  SummaryTests.cs  TestsStartup.cs  readme.md
back/TaskRunner/: Cargo.toml  Dockerfile
back/TaskRunner/src/: language.rs  lib.rs  main.rs  query.rs  register_test.rs  response.rs
devops/dev/: dev-deploy.bash  docker-compose.yml  nginx.conf
devops/prod/: cd-prod.bash  ci-prod.bash  docker-compose.yml  nginx.conf
devops/server/: deploydocker.bash  readme_server.md
front/how-to-ui/: .gitignore  README.md  package.json
front/how-to-ui/public/: index.html
front/how-to-ui/src/: App.js  globalStyles.jsx  theme.js
(+217 files in other folders)
