[package]
name = "task_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1.0-rc.2"
strum = "0.25"
strum_macros = "0.25"
fs2 = "0.4.2"